# libscribble

./: .gitmodules  .travis.yml  CMakeLists.txt  Common.mk  Makefile  README.md  Rules.mk  package.cmake  pkg-config.pc.cmake
config/: publish-doxygen  travisci_rsa.enc
debian/: .gitignore  README  changelog  control  copyright  libscribble-dev.dirs  libscribble.examples  libscribble.install
docs/: Doxyfile.in
examples/: Example.scr  FFT.scr  Foreach.scr  Local.scr  Normal.scr  Ring.scr  Solver.scr  empty.scr  for.scr  multidimen.scr  param.scr  param_invalid.scr  param_relative.scr  param_relative_invalid.scr  simple.scr
examples/splash2013/: Alltoall.scr  Distribute.scr  FFT.scr  Gather.scr  MapReduce.scr  Ring.scr  Scatter.scr  Solver.scr
include/: mpi_print.h  parser_helper.h  print.h  project.h  st_expr.h  st_node.h  st_normalise.h
include/scribble/: .gitignore  ast.h  check.h  ext_type.h  import.h  lexer.h  module.h  msg.h  parser_helper.h  print.h  print_utils.h  project.h  protocol.h  role.h  scribble.h.in  util.h
include/scribble/ast/: block_stmt.h  choice_stmt.h  continue_stmt.h  do_stmt.h  interruptible_stmt.h  par_stmt.h  recur_stmt.h  recv_stmt.h  send_stmt.h  sendrecv_stmt.h  stmt.h
include/scribble/parameterised/: ast.h  cond.h  const.h  ext_type.h  import.h  module.h  msg.h  protocol.h  range.h  role.h  role_grp.h
include/scribble/parameterised/ast/: add_expr.h  allreduce_stmt.h  block_stmt.h  choice_stmt.h  continue_stmt.h  div_expr.h  do_stmt.h  expr.h  for_stmt.h  ifblk_stmt.h  interruptible_stmt.h  mod_expr.h  mul_expr.h  oneof_stmt.h  par_stmt.h  recur_stmt.h  recv_stmt.h  rng_expr.h  send_stmt.h  sendrecv_stmt.h  seq_expr.h  shl_expr.h  shr_expr.h  stmt.h  sub_expr.h  val_expr.h  var_expr.h
include/scribble/parameterised/util/: expr_visitor.h
include/scribble/util/: ast.h  clonable.h  srclocation.h
src/: CMakeLists.txt  Makefile  check.c  check_constants.c  check_defined_roles.c  check_index_bindings.c  check_indices.c  lexer.l  mpi_print.c  parser-tool.c  parser.y  print.c  print_utils.c  project.c  scribble-tool.c
src/api/: block_stmt.cc  choice_stmt.cc  continue_stmt.cc  do_stmt.cc  ext_type.cc  import.cc  interruptible_stmt.cc  module.cc  msg.cc  par_stmt.cc  protocol.cc  recur_stmt.cc  recv_stmt.cc  role.cc  send_stmt.cc  sendrecv_stmt.cc
src/parameterised/api/: allreduce_stmt.cc  block_stmt.cc  choice_stmt.cc  const.cc  continue_stmt.cc  do_stmt.cc  expr.cc  ext_type.cc  for_stmt.cc  ifblk_stmt.cc  import.cc  interruptible_stmt.cc  module.cc  msg.cc  oneof_stmt.cc  par_stmt.cc  protocol.cc  range.cc  recur_stmt.cc  recv_stmt.cc  role.cc  role_grp.cc  send_stmt.cc  sendrecv_stmt.cc
src/parameterised/util/: expr_visitor.cc
src/parser/: lexer.l  parser.y  parser_helper.h
src/tool/: parser-tool.c
utils/: update-ver.sh
